Fixes mouse events being passed to the items behind the blocker.

--- a/src/Global.css
+++ b/src/Global.css
@@ -31,7 +31,6 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    pointer-events: none;
     font-weight: bold;
     text-transform: uppercase;
 }
